Fixed social icons not showing

--- a/src/assets/style/pages/_home.scss
+++ b/src/assets/style/pages/_home.scss
@@ -82,7 +82,8 @@
     }
 
     img {
-      padding-left: 1.25rem;
+      margin-left: 1.25rem;
+      width: 1.25rem;
       height: 1.25rem;
 
       &:hover {
